Remove unnecessary code about --release not working